# rtd-cli

./: README.md  pyproject.toml  setup.py  versions.json
.github/workflows/: release.yml
rtd/: main.py
src/rtd/: main.py
