[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtd-cli"
version = "0.0.4"
description = "Simple CLI wrapper for the Readthedocs REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ryan Williams", email = "ryan@runsascoded.com"},
]
keywords = ["readthedocs", "rtd", "cli", "docs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click",
    "requests",
]

[project.urls]
Repository = "https://github.com/runsascoded/rtd.py"
Issues = "https://github.com/runsascoded/rtd.py/issues"

[project.scripts]
rtd = "rtd.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
